[package]
name = "freee-timecard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
clap = { version = "4.5.23", features = ["derive"] }
confy = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
